app/src/main/java/com/example/firewatch/shared/errors/UserTypeNotExists.kt
package com.example.firewatch.shared.errors

class UserTypeNotExists(userType: String)
    : IllegalArgumentException("The UserType $userType does not exists") {
}